styles.css
html
{
    box-sizing: border-box;
    font-family: Roboto, Papyrus, sans-serif;
    font-size: 18px;
}

*,
*::before,
*::after
{
    box-sizing: inherit;
}

body
{
    height: 100vh;
    margin: 0;
    display: flex;
    flex-direction: column;
    background-color: indianred;
    color: bisque;
}

p
{
    margin: 0;
    padding: 0;
}

.header,
.footer
{
    display: flex;
    align-items: center;
}

.header
{
    padding: 5px 0px;
    justify-content: space-around;
}

.footer
{
    padding: 40px 0px;
    justify-content: center;
}

.logo
{
    font-size: 24px;
    font-weight: 900;

}

.navigation
{
    list-style: none;
    display: flex;
    gap: 20px;
}

.navigation a
{
    color: bisque;
    text-decoration: none;
}

.content
{
    flex: 1;
    display: flex;
    flex-direction:column;
    align-items: stretch;
}

.top,
.upper-middle,
.lower-middle,
.bottom
{
    flex: 1;
    display: flex;
}

.top
{
    justify-content: center;
    gap: 40px;
    padding: 50px;
}

.intro
{
    flex: 0 1 400px;
    display: flex;
    flex-direction: column;
    align-items:baseline;
    gap: 15px;
}
.hero-header
{
    font-size: 48px;
    font-weight: 900;
}

.sign-up
{
    background-color: seagreen;
    font-size: 18px;
    border: none;
    border-radius: 12px;
    padding: 10px 40px;
    color: bisque;
    font-weight: 600;
}
.top img
{
    width: 300px;
    height: 300px;
    border: 5px solid bisque;
    border-radius: 50%;
}

.upper-middle
{
    background-color: bisque;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 40px 0px 80px;
    gap: 40px
}

.information-header
{
    font-size: 36px;
    font-weight: 900;
    color: indianred;

}
.information
{
    display: flex;
    flex-flow: row wrap;
    list-style: none;
    margin: 0;
    padding: 0;
    gap: 10px 40px;
}

.information img
{
    width: 200px;
    height: 200px;
    border: 4px solid indianred;
    border-radius: 16px;
}

.information li
{
    display: flex;
    flex-direction: column;
    flex: 0 1 200px;
    color: indianred;
    gap: 10px;
}

.lower-middle
{
    background-color: rgb(212, 190, 163);
    justify-content: center;
    align-items: center;
}

.quote
{
    display: flex;
    flex: 0 1 1000px;
    flex-direction: column;
    padding: 120px 0px;
}

.quote-text
{
    font-size:36px;
    font-weight:300;
    color: rgb(158, 71, 71);;
    padding: 0;
    margin: 0;
}
.quote-author
{
    align-self: flex-end;
    font-size: 28px;
    font-weight: 900;
    color:rgb(158, 71, 71);
}
.bottom
{
    justify-content: center;
    align-items: center;
    background-color: bisque;
    padding: 80px 0px;
}

.reminder
{
    display:flex;
    justify-content: center;
    align-items: center;
    gap: 100px;
    background-color: seagreen;
    padding: 40px 120px;
    border: none;
    border-radius: 10px;
}
.action
{
    display: flex;
    flex-direction: column;
    gap: 5px;
}
.action p
{
    margin: 0;
    padding: 0;

}
.action-header
{
    font-size:24px;
    font-weight: 900;
}

.reminder button
{
    border: 2px solid bisque;
}

